--- a/eurecarr_core/src/MessageInterface/CMakeLists.txt
+++ b/eurecarr_core/src/MessageInterface/CMakeLists.txt
@@ -1,7 +1,8 @@
+include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
 add_executable(MessageInterface
                MessageInterface.cpp)
-add_dependencies(MessageInterface autorally_msgs_gencpp)
-target_link_libraries(MessageInterface ${catkin_LIBRARIES})
+add_dependencies(MessageInterface autorally_msgs_gencpp ${PROJECT_NAME}_gencfg)
+target_link_libraries(MessageInterface ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 install(TARGETS
   MessageInterface
