Added Steering Nonlinearity

--- a/eurecarr_core/config/MessageInterfaceParams.cfg
+++ b/eurecarr_core/config/MessageInterfaceParams.cfg
@@ -9,6 +9,7 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 #       Name       Type      Level Description     Default Min   Max
+gen.add("steering_nonlinearity", double_t, 0, "steering_nonlinearity*steering^3 + (1-steering_nonlinearity)*steering", 0.0, 0.0, 1.0)
 gen.add("steering_lpf_hz", double_t, 0, "Low pass filter frequency in Hz", 40.0, 1, 100.0)
 gen.add("throttle_lpf_hz", double_t, 0, "Low pass filter frequency in Hz", 40.0, 1, 100.0)
 # gen.add("wptFilename", str_t, 0, "Path to waypoint files", "waypoints.txt")
