--- a/eurecarr_simulation/CMakeLists.txt
+++ b/eurecarr_simulation/CMakeLists.txt
@@ -110,7 +110,7 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES eurecarr_simulation
   CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs
-  DEPENDS system_lib
+  #DEPENDS system_lib
 )
 
 ###########
