--- a/eurecarr_simulation/CMakeLists.txt
+++ b/eurecarr_simulation/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf2
   tf2_ros
+  ackermann_msgs
 )
 
 ## System dependencies are found with CMake's conventions
